testsuite/gnatprove/tests/ug__ownership_transfer/test.out
 error: dereference from "X" is not writable
--> ownership_transfer.adb:13:06
   13 |       X.all := X.all + 1;  --  illegal
      |       ~~^~~
      + object was moved at line 11 [E0010]
   11 |       Y := X;
      |            ^
      + launch "gnatprove --explain=E0010" for more information

 error: dereference from "X" is not readable
--> ownership_transfer.adb:13:15
   13 |       X.all := X.all + 1;  --  illegal
      |                ~~^~~
      + object was moved at line 11 [E0010]
   11 |       Y := X;
      |            ^
      + launch "gnatprove --explain=E0010" for more information

 error: dereference from "X" is not writable
--> ownership_transfer.adb:14:06
   14 |       X.all := 1;          --  illegal
      |       ~~^~~
      + object was moved at line 11 [E0010]
   11 |       Y := X;
      |            ^
      + launch "gnatprove --explain=E0010" for more information

 error: dereference from "X" is not readable
--> ownership_transfer.adb:15:15
   15 |       Tmp   := X.all;      --  illegal
      |                ~~^~~
      + object was moved at line 11 [E0010]
   11 |       Y := X;
      |            ^
      + launch "gnatprove --explain=E0010" for more information
ownership_transfer.gpr: error: [Ada Analysis] ownership_transfer.adb (ownership_transfer.gpr) failed with status 5
gnatprove: error during flow analysis and proof
